deploy/k8s/08-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: job-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: registry.git.hsnl.tw/native_cloud/distributed_job_scheduler/backend:latest
          imagePullPolicy: IfNotPresent
          command: ["locust"]
          args: ["-f", "/mnt/locust/locustfile_advanced.py", "--host", "http://backend:8000"]
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: locust-script-volume
              mountPath: /mnt/locust
      volumes:
        - name: locust-script-volume
          configMap:
            name: locust-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: job-scheduler
spec:
  selector:
    app: locust
  ports:
    - port: 8089
      targetPort: 8089
  type: ClusterIP
